added 3 properties into the file

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -284,6 +284,7 @@ timer.mins.planetaryAlignment=3.000
 timer.mins.summonBlizzard=3.000
 timer.mins.summonFamiliar=10.000
 timer.mins.exhume=10.000
+timer.secs.monkCombination=30.000
 [associations]
 guild.maxOutposts=2.000
 guild.outpost.maxGolem=2.000
@@ -1071,11 +1072,13 @@ skill.notch.hardcoreBonus=0.600
 skill.notch.pyrokinetics=50.000
 skill.notch.fishing=70.000
 skill.notch.spellWeave=150.000
+skill.notch.bandage=30.000
 skill.cost.practice=5111.000
 skill.cap.multi.mod.primarySkill=0.960
 skill.cap.multi.mod.secondarySkill=0.900
 skill.practice.relativeCap=0.750
 skill.timer.secs.smiteEvil=3.000
+skill.shieldBlock.blessBonus=1.200
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
