moved goodie exp group cap to 10

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -273,7 +273,7 @@ exp.required.60=20000000.000
 exp.required.65=20000000.000
 exp.maxSkillChance=10.000
 exp.maxExpLevel=44.000
-exp.groupLimit.good=9
+exp.groupLimit.good=10
 exp.groupLimit.evil=4
 [timers]
 timer.innate.godCall=900.000
@@ -1079,6 +1079,8 @@ skill.cap.multi.mod.secondarySkill=0.900
 skill.practice.relativeCap=0.750
 skill.timer.secs.smiteEvil=3.000
 skill.shieldBlock.blessBonus=1.200
+skill.guard.agiDiffMaxBonus=10.000
+skill.guard.guardFightingPenalty=20.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
