--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1189,6 +1189,7 @@ epic.freqMod.touch.sub=0.150
 epic.freqMod.min=0.250
 epic.freqMod.max=1.700
 epic.showCompleted.delaySecs=1800.000
+epic.eliteMob=3.000
 [auctions]
 auctions.defaultLength=172800.000
 auctions.bidTimeExtension=600.000
