--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1100,6 +1100,7 @@ skill.timer.secs.smiteEvil=3.000
 skill.shieldBlock.blessBonus=1.200
 skill.guard.agiDiffMaxBonus=5.000
 skill.guard.guardFightingPenalty=5.000
+skill.criticalAttack.disarm.dropChance=5.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
