--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -284,7 +284,7 @@ exp.required.55=20000000.000
 exp.required.60=20000000.000
 exp.required.65=20000000.000
 exp.maxSkillChance=10.000
-exp.maxExpLevel=44.000
+exp.maxExpLevel=46.000
 exp.groupLimit.good=10.000
 exp.groupLimit.evil=6.000
 exp.factor.paladin.vsEvil=1.150
@@ -1159,6 +1159,7 @@ saves.spell.class.Avenger=-10.000
 [raid]
 raid.min.slots=12.000
 [epic]
+epic.maxFreeLevel=50.00
 epic.errandStep=200.000
 epic.skillPointStep=100.000
 epic.monolith.activeTime=60.000
