added enhance healing to healer god call.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1277,3 +1277,5 @@ reavers.ice.penalty.pulse.1hBludgeon=2.000
 reavers.ice.penalty.pulse.2hBludgeon=3.000
 reavers.flame.penalty.pulse.2hSlashing=3.000
 reavers.shock.penalty.pulse.2hSlashing=3.000
+[enhancements]
+enhancement.healing.mod=12.000
