various property tweaks

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -44,6 +44,7 @@ damage.reduction.sanctuary=0.800
 damage.reduction.sanctuary.paladin.groupMod=0.020
 damage.reduction.trollskin=0.850
 damage.reduction.barkskin=0.850
+damage.reduction.ironwood=0.800
 damage.reduction.soulshield.melee=0.800
 damage.reduction.soulshield.spell=0.800
 damage.reduction.protLiving=0.800
@@ -59,6 +60,7 @@ damage.reduction.shadowShield=0.750
 damage.reduction.biofeedback=0.650
 damage.reduction.skinSpell.deduct=46.000
 damage.increase.coldWrithe=2.000
+damage.increase.ironwood=1.800
 damage.increase.barkskin=1.150
 damage.increase.elementalist=1.150
 damage.increase.fireColdShield=2.000
@@ -355,6 +357,8 @@ spell.divineBlessing.parryChance=15.000
 spell.divineBlessing.areaShrugChance=1.000
 spell.divineBlessing.singleShrugChance=10.000
 spell.detonate.shrugModifier=0.600
+spell.corpseform.duration.mins=20.000
+spell.corpseform.improvedChance=10.000
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
@@ -686,7 +690,7 @@ stats.cha.Gargoyle=95.000
 stats.kar.Gargoyle=100.000
 stats.luc.Gargoyle=80.000
 stats.str.FireElemental=100.000
-stats.dex.FireElemental=80.000
+stats.dex.FireElemental=110.000
 stats.agi.FireElemental=250.000
 stats.con.FireElemental=130.000
 stats.pow.FireElemental=150.000
@@ -1109,7 +1113,7 @@ skill.notch.guard=5.000
 skill.notch.cleave=10.000
 skill.notch.groundCasting=60.000
 skill.notch.chants=100.000
-skill.notch.slip=1.000
+skill.notch.slip=40.000
 skill.slip.fightingPenalty=20.000
 skill.cost.practice=5111.000
 skill.cap.multi.mod.primarySkill=0.960
@@ -1263,7 +1267,7 @@ nexusStones.epicsMin=40.000
 nexusStones.epicsMax=60.000
 nexusStones.expireDays=30.000
 nexusStones.sage.death.guardian.hit.modifier=0.500
-nexusStones.sage.respawnWaitSecs=3600.000
+nexusStones.sage.respawnWaitSecs=14400.000
 nexusStones.sage.statAddCost=1.000
 nexusStones.sage.statAdd=1.000
 nexusStones.sage.hitPoints=6000.000
