added mod for archery cursed arrows skill

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1428,3 +1428,7 @@ grapple.groundslam.dmgmod=1.000
 grapple.groundslam.duration=2.000
 grapple.groundslam.size.up=2.000
 grapple.groundslam.size.down=2.000
+[track]
+track.scan.lag=1.000
+[archery]
+archery.cursedArrows.mod=1.000
