added enchant arrows skill property.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1432,3 +1432,4 @@ grapple.groundslam.size.down=2.000
 track.scan.lag=1.000
 [archery]
 archery.cursedArrows.mod=1.000
+archery.enchantArrows.mark.duration=300.000
