Added archery properties.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -455,6 +455,8 @@ spell.detonate.shrugModifier=0.600
 spell.corpseform.duration.mins=20.000
 spell.corpseform.improvedChance=10.000
 spell.mordenkainensLucubration.spellMemChance=80.000
+spell.bindingWind.archery=0.700
+spell.windTunnel.archery=1.300
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
@@ -1431,5 +1433,11 @@ grapple.groundslam.size.down=2.000
 [track]
 track.scan.lag=1.000
 [archery]
+archery.dexPerShot=30.000
+archery.strPerRoomRange=40.000
+archery.hitPenalty=0.700
+archery.rangePenalty=10.000
+archery.diceFactor=4.000
+archery.hitrollFactor=1.000
 archery.cursedArrows.mod=1.000
 archery.enchantArrows.mark.duration=300.000
