--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1627,3 +1627,6 @@ archery.enchantArrows.mark.duration=300.000
 [prestige]
 prestige.update.secs=7200.000
 prestige.update.multiplier=0.999
+[poison]
+poison.maxDuration.min=15.000
+
