made ascend/descend cost epics properly, added properties for it

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1629,4 +1629,8 @@ prestige.update.secs=7200.000
 prestige.update.multiplier=0.999
 [poison]
 poison.maxDuration.min=10.000
-
+[ascend]
+ascend.epicCost=50.000
+[descend]
+descend.necromancer.epicsReq=4000.000
+descend.epicCost=50.000
