And the prop file for the do_home() cleanup. #212

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -522,7 +522,7 @@ spell.windTunnel.archery=1.300
 spell.plague.spread.perc=30.000
 spell.plague.spread.time=60.000
 spell.plague.duration=2.000
-spell.wizardEye.maxDistance=100.00
+spell.wizardEye.maxDistance=100.000
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
@@ -1642,3 +1642,5 @@ ascend.epicCost=50.000
 [descend]
 descend.necromancer.epicsReq=4000.000
 descend.epicCost=50.000
+[econ]
+price.home.plat=50.000
