--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -529,6 +529,7 @@ spell.plague.duration=2.000
 spell.wizardEye.maxDistance=100.000
 spell.siren.song.dist=30.000
 spell.chaosshield.perc=10.000
+spell.berserk.casting.starMod=1.500
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
@@ -1344,7 +1345,7 @@ innate.shrug.Undead=10.000
 innate.shrug.Dragon=60.000
 innate.shrug.Beholder=85.000
 innate.shrug.Dracolich=30.000
-innate.shrug.Githzerai=40.000
+innate.shrug.Githzerai=20.000
 innate.shrug.Angel=30.000
 innate.shrug.Beholderkin=35.000
 innate.shrug.Spectre=20.000
