--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -530,6 +530,8 @@ spell.wizardEye.maxDistance=100.000
 spell.siren.song.dist=30.000
 spell.chaosshield.perc=10.000
 spell.berserk.casting.starMod=1.500
+spell.spikeGrowth.affectChance=10.000
+spell.lendHealth.healRatio=1.000
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
 timer.stoneskin.artifact.sunblade=45.000
