Missing a few lines for Elohim race.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -162,6 +162,7 @@ damage.totalOutput.racial.Wraith=1.000
 damage.totalOutput.racial.Shadow=1.000
 damage.totalOutput.racial.Drider=1.000
 damage.totalOutput.racial.PurpleWorm=1.000
+damage.totalOutput.racial.Elohim=1.010
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=13.000
 damage.pulse.racial.Barbarian=13.000
@@ -239,6 +240,7 @@ damage.pulse.racial.Spectre=10.500
 damage.pulse.racial.Shadow=10.500
 damage.pulse.racial.Drider=12.000
 damage.pulse.racial.PurpleWorm=10.000
+damage.pulse.racial.Elohim=13.000
 damage.totalOutput.class.None=1.000
 damage.totalOutput.class.Warrior=1.000
 damage.totalOutput.class.Ranger=1.010
@@ -399,6 +401,7 @@ spellcast.pulse.racial.Spectre=1.000
 spellcast.pulse.racial.Zombie=1.000
 spellcast.pulse.racial.Drider=1.000
 spellcast.pulse.racial.PurpleWorm=1.000
+spellcast.pulse.racial.Elohim=1.000
 [exp]
 exp.factor.racewar.good=2.000
 exp.factor.racewar.evil=1.500
@@ -1366,6 +1369,7 @@ innate.shrug.Spectre=20.000
 innate.shrug.Wraith=35.000
 innate.shrug.Shadow=25.000
 innate.shrug.Drider=55.000
+innate.shrug.Elohim=25.000
 innate.evasion.removechance=15.000
 innate.dualDaggers.pulse=-3.000
 # heals = heals * ( healing_mod * level ) / 100
