Removed unused properties. Lowered AP damage.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -39,8 +39,8 @@ vamping.vampiricTouch.paladins=0.100
 vamping.vampiricTouch.rangers=0.100
 vamping.hellfire=1.000
 vamping.hellfire.absorb=0.160
-vamping.battleEcstasy=0.050
-vamping.holySacrifice=0.100
+vamping.battleEcstasy=0.100
+vamping.holySacrifice=0.200
 vamping.vampiricTrance=0.200
 vamping.undeadNpc=0.100
 vamping.innateUndead=0.040
@@ -48,7 +48,10 @@ vamping.battletide=0.250
 vamping.maxHP.NPC_undead=1.250
 vamping.maxHP.PC=1.500
 vamping.maxHP.all=1.500
-vamping.BTX.others.HP.PC=1.250
+vamping.BTX.others.HP.PC=1.000
+vamping.BTX.self.HP.PC=1.750
+vamping.BTX.others.HP.NPC=2.000
+vamping.self.battleEcstasy=0.150
 vamping.Dharma.maxhitMod=1.000
 vamping.undead.hpCap=1.500
 [map]
@@ -279,7 +282,7 @@ damage.totalOutput.class.Warrior=1.000
 damage.totalOutput.class.Ranger=1.010
 damage.totalOutput.class.Psionicist=0.800
 damage.totalOutput.class.Paladin=1.000
-damage.totalOutput.class.Anti-Paladin=1.000
+damage.totalOutput.class.Anti-Paladin=.900
 damage.totalOutput.class.Cleric=0.900
 damage.totalOutput.class.Monk=0.750
 damage.totalOutput.class.Druid=0.900
@@ -1474,11 +1477,11 @@ innate.timer.secs.divineforceAffect=20.000
 innate.timer.secs.divineforceTimer=600.000
 [misfire]
 misfire.zoning.maxGroup=99.000
-misfire.pvp.maxDiff=15.000
-misfire.pvp.minChance=20.000
+misfire.pvp.maxAllies=13.000
+misfire.pvp.minChance=40.000
 misfire.pvp.chanceStep=15.000
 misfire.pvp.maxChance=60.000
-misfire.pvp.recountDelay.sec=360.000
+misfire.pvp.recountDelay.sec=2.000
 [skills]
 skill.notch.defensive=80.000
 skill.notch.offensive=10.000
