Duris properties commit update.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -43,6 +43,7 @@ vamping.vampiricTouch.rangers=0.100
 vamping.hellfire=1.000
 vamping.hellfire.absorb=0.160
 vamping.battleEcstasy=0.120
+vamping.self.NPCbattleEcstasy=0.050
 vamping.holySacrifice=0.200
 vamping.vampiricTrance=0.200
 vamping.undeadNpc=0.100
@@ -1563,7 +1564,7 @@ damage.headbutt.damBonusMinotaur=2.000
 damage.headbutt.damBonusVsSmaller=1.250
 damage.headbutt.damPenaltyVsLarger=0.750
 skill.enchant.minItemCondition=30.000
-skill.anatomy.ratio=2.000
+skill.anatomy.NPC=5.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
