--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -198,7 +198,7 @@ damage.totalOutput.racial.AquaticAnimal=1.200
 damage.totalOutput.racial.FlyingAnimal=1.000
 damage.totalOutput.racial.Quadraped=1.000
 damage.totalOutput.racial.Primate=1.200
-damage.totalOutput.racial.Humanoid=1.000
+damage.totalOutput.racial.Humanoid=1.100
 damage.totalOutput.racial.Animal=1.100
 damage.totalOutput.racial.Plant=1.100
 damage.totalOutput.racial.Herbivore=1.000
@@ -470,7 +470,7 @@ exp.factor.Elite.mob=1.500
 exp.factor.racewar.good=1.000
 exp.factor.racewar.evil=1.000
 exp.factor.racewar.undead=1.000
-exp.factor.damage=1.000
+exp.factor.damage=0.850
 exp.factor.healing=1.000
 exp.factor.melee=0.100
 exp.factor.kill=0.650
@@ -492,8 +492,8 @@ exp.maxExpLevel=46.000
 exp.maxExplevel.illithid=56.000
 exp.maxMultiLevel=56.000
 exp.multiEpicMultiplier=2.000
-exp.groupLimit.good=10.000
-exp.groupLimit.evil=8.000
+exp.groupLimit.good=13.000
+exp.groupLimit.evil=12.000
 exp.factor.paladin.vsGood=0.000
 exp.factor.paladin.vsEvil=1.150
 exp.factor.antipaladin.vsGood=1.333
@@ -1132,7 +1132,7 @@ stats.luc.Golem=100.000
 stats.str.Faerie=60.000
 stats.dex.Faerie=130.000
 stats.agi.Faerie=160.000
-stats.con.Faerie=70.000
+stats.con.Faerie=125.000
 stats.pow.Faerie=150.000
 stats.int.Faerie=100.000
 stats.wis.Faerie=90.000
@@ -1239,13 +1239,13 @@ stats.wis.Primate=10.000
 stats.cha.Primate=100.000
 stats.kar.Primate=100.000
 stats.luc.Primate=100.000
-stats.str.Humanoid=100.000
-stats.dex.Humanoid=100.000
-stats.agi.Humanoid=100.000
-stats.con.Humanoid=100.000
-stats.pow.Humanoid=100.000
-stats.int.Humanoid=100.000
-stats.wis.Humanoid=100.000
+stats.str.Humanoid=110.000
+stats.dex.Humanoid=110.000
+stats.agi.Humanoid=110.000
+stats.con.Humanoid=110.000
+stats.pow.Humanoid=90.000
+stats.int.Humanoid=90.000
+stats.wis.Humanoid=90.000
 stats.cha.Humanoid=100.000
 stats.kar.Humanoid=100.000
 stats.luc.Humanoid=100.000
@@ -1635,11 +1635,10 @@ memorize.factor.npc=1.000
 bard.instrumentFactor=0.350
 song.bard.harming.mod=1.000
 [random_equip]
-random.drop.rate=-10.000
 random.drop.piece.percentage=20.000
 random.drop.equip.percentage=6.000
 random.drop.modifier.hardcore=150.000
-random.drop.modifier.quality=20.000
+random.drop.modifier.quality=50.000
 random.drop.luck.divisor=5.000
 [saves]
 saves.spell.starting=70.000
@@ -1683,7 +1682,7 @@ saves.petri.racial.Troll=10.000
 saves.spell.class.Paladin=-10.000
 saves.spell.class.Avenger=-10.000
 [raid]
-raid.min.slots=12.000
+raid.min.slots=6.000
 [epic]
 epic.multiclass.EpicSkillCost=2.000
 epic.multiclass.EpicPlatCost=3.000
@@ -1787,7 +1786,8 @@ nexusStones.bonus.exp=0.150
 nexusStones.bonus.cargo=0.150
 nexusStones.bonus.prestige=0.150
 [worldQuest]
-worldQuest.maxPerDay=4.000
+worldQuest.abandon.mod=1.000
+worldQuest.maxPerDay=6.000
 [mines]
 mines.maxSurfaceMap=50.000
 mines.maxTharnRift=25.000
@@ -1891,3 +1891,121 @@ move.regen.prone=1.250
 move.regen.sitting=1.130
 move.regen.sleeping=1.750
 move.regen.resting=1.330
+[Gain exp from limits.c]
+gain.exp.mod.warrior=0.500
+gain.exp.mod.mercenary=0.500
+gain.exp.mod.avenger=0.500
+gain.exp.mod.dreadlord=0.500
+gain.exp.mod.sorcerer=1.250
+gain.exp.mod.conjurer=1.250
+gain.exp.mod.necromancer=1.250
+gain.exp.mod.psionicist=1.500
+gain.exp.mod.paladin=1.000
+gain.exp.mod.antipaladin=1.000
+gain.exp.mod.ethermancer=1.500
+gain.exp.mod.berserker=0.750
+gain.exp.mod.monk=0.750
+gain.exp.mod.cleric=1.250
+gain.exp.mod.shaman=1.500
+gain.exp.mod.druid=1.500
+gain.exp.mod.ranger=1.000
+gain.exp.mod.mindflayer=1.000
+gain.exp.mod.reaver=1.000
+gain.exp.mod.other=0.250
+gain.exp.mod.easyraces=0.750
+gain.exp.mod.player.necro=0.750
+gain.exp.mod.player.necro.tier=0.500
+gain.exp.mod.player.merc=0.750
+gain.exp.mod.victim.act.hunter=1.150
+gain.exp.mod.victim.race.elite=4.000
+gain.exp.mod.victim.act.nomemory=0.250
+gain.exp.mod.victim.location.hometown=0.200
+gain.exp.mod.TotalOverall=0.750
+gain.exp.mod.player.level.thirtyone=0.500
+gain.exp.mod.player.level.fortyone=0.500
+gain.exp.mod.player.level.fiftyone=1.000
+gain.exp.mod.player.level.fiftyfive=1.000
+gain.exp.mod.victim.ability.breath.weapon=1.250
+gain.exp.mod.victim.race.Agathinon: 1.000
+gain.exp.mod.victim.race.AirElemental: 1.000
+gain.exp.mod.victim.race.Angel: 3.000
+gain.exp.mod.victim.race.Animal: 0.500
+gain.exp.mod.victim.race.AquaticAnimal: 0.500
+gain.exp.mod.victim.race.Arachnid: 0.250
+gain.exp.mod.victim.race.Barbarian: 1.000
+gain.exp.mod.victim.race.Beholder: 3.000
+gain.exp.mod.victim.race.Beholderkin: 1.000
+gain.exp.mod.victim.race.Carnivore: 0.500
+gain.exp.mod.victim.race.Centaur: 1.000
+gain.exp.mod.victim.race.DeathKnight: 1.000
+gain.exp.mod.victim.race.Demon: 3.000
+gain.exp.mod.victim.race.Devil: 3.000
+gain.exp.mod.victim.race.Dracolich: 2.000
+gain.exp.mod.victim.race.Dragon: 3.000
+gain.exp.mod.victim.race.Dragonkin: 1.000
+gain.exp.mod.victim.race.Drider: 1.000
+gain.exp.mod.victim.race.DrowElf: 1.000
+gain.exp.mod.victim.race.DuergarDwarf: 1.000
+gain.exp.mod.victim.race.EarthElemental: 1.000
+gain.exp.mod.victim.race.Efreet: 2.000
+gain.exp.mod.victim.race.Faerie: 1.000
+gain.exp.mod.victim.race.FireElemental: 1.000
+gain.exp.mod.victim.race.FlyingAnimal: 0.500
+gain.exp.mod.victim.race.Gargoyle: 1.000
+gain.exp.mod.victim.race.Ghost: 1.000
+gain.exp.mod.victim.race.Giant: 1.000
+gain.exp.mod.victim.race.Githyanki: 1.000
+gain.exp.mod.victim.race.Githzerai: 1.000
+gain.exp.mod.victim.race.Gnome: 1.000
+gain.exp.mod.victim.race.Goblin: 1.000
+gain.exp.mod.victim.race.Golem: 1.000
+gain.exp.mod.victim.race.GreyElf: 1.000
+gain.exp.mod.victim.race.Half-Elf: 1.000
+gain.exp.mod.victim.race.HalfOrc: 1.000
+gain.exp.mod.victim.race.Halfling: 1.000
+gain.exp.mod.victim.race.Harpy: 1.000
+gain.exp.mod.victim.race.Herbivore: 0.250
+gain.exp.mod.victim.race.Human: 1.000
+gain.exp.mod.victim.race.Humanoid: 1.000
+gain.exp.mod.victim.race.Illithid: 1.000
+gain.exp.mod.victim.race.Insect: 0.100
+gain.exp.mod.victim.race.Lich: 1.000
+gain.exp.mod.victim.race.Lycanthrope: 1.000
+gain.exp.mod.victim.race.Minotaur: 1.000
+gain.exp.mod.victim.race.MountainDwarf: 1.000
+gain.exp.mod.victim.race.Ogre: 1.000
+gain.exp.mod.victim.race.Orc: 1.000
+gain.exp.mod.victim.race.Orog: 1.000
+gain.exp.mod.victim.race.PLich: 1.000
+gain.exp.mod.victim.race.PVampire: 1.000
+gain.exp.mod.victim.race.Parasite: 0.100
+gain.exp.mod.victim.race.Phantom: 1.000
+gain.exp.mod.victim.race.Plant: 1.000
+gain.exp.mod.victim.race.Primate: 1.000
+gain.exp.mod.victim.race.PurpleWorm: 1.000
+gain.exp.mod.victim.race.Quadruped: 0.500
+gain.exp.mod.victim.race.Rakshasa: 1.000
+gain.exp.mod.victim.race.Reptile: 0.750
+gain.exp.mod.victim.race.Revenant: 1.000
+gain.exp.mod.victim.race.Shade: 1.000
+gain.exp.mod.victim.race.Shadow: 1.000
+gain.exp.mod.victim.race.ShadowBeast: 1.000
+gain.exp.mod.victim.race.Skeleton: 1.000
+gain.exp.mod.victim.race.Slime: 0.250
+gain.exp.mod.victim.race.Snake: 0.500
+gain.exp.mod.victim.race.SnowOgre: 1.000
+gain.exp.mod.victim.race.Spectre: 1.000
+gain.exp.mod.victim.race.StormGiant: 1.000
+gain.exp.mod.victim.race.Thri-Kreen: 1.000
+gain.exp.mod.victim.race.Troll: 1.000
+gain.exp.mod.victim.race.Undead: 1.000
+gain.exp.mod.victim.race.Vampire: 1.000
+gain.exp.mod.victim.race.WaterElemental: 1.000
+gain.exp.mod.victim.race.Wight: 1.000
+gain.exp.mod.victim.race.Wraith: 1.000
+gain.exp.mod.victim.race.Zombie: 1.000
+[World Quest]
+world.quest.exp.level.twenty=2.000
+world.quest.exp.level.thirty=1.500
+world.quest.exp.level.forty=1.000
+world.quest.exp.level.other=0.500
