Added LibraryRoom guildhall room type, as well as hook in memorize code

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2091,3 +2091,5 @@ guildhalls.construction.platinum.upgrade.bank=15000.000
 guildhalls.construction.points.upgrade.bank=25.000
 guildhalls.construction.platinum.upgrade.town_portal=20000.000
 guildhalls.construction.points.upgrade.town_portal=30.000
+guildhalls.construction.platinum.upgrade.library=25000.000
+guildhalls.construction.points.upgrade.library=35.000
