Ship changes: - Renamed some ship variables for clarity, moved function declarations into .h file, moved some cargo-specific code into ship_cargo.c - Encapsulated all ship cargo calculations in ship_cargo.c, renamed several defines for clarity, general cleanup of ship code - Increased cargo location modifiers, especially between GC/EC - Increased cargo prices - added property for ship cargo/contraband weight

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1765,6 +1765,8 @@ auctions.closingPctFee=0.060
 warship.sails.damage.reduction=0.850
 ship.sinking.rewardDivider=3.000
 ship.contraband.confiscationChanceModifier=1.000
+ship.weight.cargo=1.250
+ship.weight.contraband=1.500
 [shops]
 shops.sellTrophyMod=0.050
 shops.sellMinPct=0.100
