Added: new property for the victim of a bearhug

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1871,6 +1871,7 @@ grapple.groundslam.dmgmod=1.000
 grapple.groundslam.duration=2.000
 grapple.groundslam.size.up=0.000
 grapple.groundslam.size.down=2.000
+grapple.bearhug.duration.victim=2.00
 [track]
 track.scan.lag=1.000
 [archery]
