synccing properties (torgal) - reduced epic task buyoff price

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1784,7 +1784,7 @@ shops.sellMinPct=0.100
 shops.peruse.cost=1000.000
 [mobspecs]
 mobspecs.rename.price=5000000.000
-mobspecs.epicTaskClear.price=2500000.000
+mobspecs.epicTaskClear.price=500000.000
 [portals]
 portals.etherportal.maxToPass=5.000
 portals.etherportal.initTimeout=5.000
@@ -1882,7 +1882,7 @@ grapple.groundslam.dmgmod=1.000
 grapple.groundslam.duration=2.000
 grapple.groundslam.size.up=0.000
 grapple.groundslam.size.down=2.000
-grapple.bearhug.duration.victim=2.00
+grapple.bearhug.duration.victim=2.000
 [track]
 track.scan.lag=1.000
 [archery]
