Adding: arcane block damage reduction property.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1569,6 +1569,7 @@ misfire.pvp.chanceStep=15.000
 misfire.pvp.maxChance=60.000
 misfire.pvp.recountDelay.sec=2.000
 [skills]
+skill.arcane.block.dam.reduction=0.004
 skill.notch.offensive.vicious.strike=5.000
 skill.notch.soulTrap=5.000
 skill.notch.defensive=5.000
