Properties: update to svn

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -104,7 +104,7 @@ damage.reduction.barkskin=0.950
 damage.reduction.berserk=0.900
 damage.reduction.soulshield.melee=0.900
 damage.reduction.soulshield.spell=0.900
-damage.reduction.negshield.spell=0.600
+damage.reduction.negshield.spell=0.750
 damage.reduction.protLiving=0.950
 damage.reduction.protAnimal=0.800
 damage.reduction.protElement=0.900
@@ -715,7 +715,7 @@ stats.luc.Barbarian=100.000
 stats.str.DrowElf=85.000
 stats.dex.DrowElf=105.000
 stats.agi.DrowElf=125.000
-stats.con.DrowElf=75.000
+stats.con.DrowElf=85.000
 stats.pow.DrowElf=125.000
 stats.int.DrowElf=130.000
 stats.wis.DrowElf=110.000
@@ -1506,7 +1506,7 @@ innate.shrug.Half-Elf=10.000
 innate.shrug.Human=0.001
 innate.shrug.Lich=40.000
 innate.shrug.PLich=40.000
-innate.shrug.DrowElf=75.000
+innate.shrug.DrowElf=55.000
 innate.shrug.Vampire=50.000
 innate.shrug.PVampire=50.000
 innate.shrug.AirElemental=20.000
@@ -1931,6 +1931,9 @@ epic.frag.thrill.duration=300.000
 look.showquestgiver.maxlvl=30.000
 [Epic skills]
 epic.skill.toughness=0.500
+epic.skill.toughness.monk.low=0.800
+epic.skill.toughness.monk.medium=1.000
+epic.skill.toughness.monk.high=1.250
 [Elemental summoning]
 summon.greater.elemental.charisma=125.000
 summon.lesser.elemental.charisma=115.000
@@ -2097,3 +2100,5 @@ guildhalls.construction.platinum.upgrade.library=25000.000
 guildhalls.construction.points.upgrade.library=35.000
 guildhalls.construction.platinum.upgrade.cargo=20000.000
 guildhalls.construction.points.upgrade.cargo=30.000
+[Monks]
+monk.weight.str.modifier.denominator=10.000
