Adding mines to UD.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1929,6 +1929,7 @@ worldQuest.maxPerDay.evils=14.000
 [mines]
 mines.maxSurfaceMap=80.000
 mines.maxTharnRift=5.000
+mines.maxUD=80.00
 mines.reloadMins=25.000
 [zealots]
 zealots.memHitChance=3.000
