Updating random eq percentages per (#528)

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1756,8 +1756,10 @@ memorize.factor.npc=1.000
 bard.instrumentFactor=0.350
 song.bard.harming.mod=1.000
 [random_equip]
-random.drop.piece.percentage=20.000
-random.drop.equip.percentage=6.000
+random.drop.piece.percentage=75.000
+random.drop.equip.percentage=75.000
+random.drop.increase.for.below.lvl=20
+random.drop.increase.for.below.lvl.perc=30
 random.drop.modifier.hardcore=150.000
 random.drop.modifier.quality=50.000
 random.drop.luck.divisor=5.000
