Fixed hometowns, added kits for new races, fixed psi's seeing mana in prompt by default, added memorize reduction. (fixes #547)

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1754,6 +1754,8 @@ memorize.factor.tupor=1.000
 memorize.factor.multi.commune=3.000
 memorize.factor.commune=0.900
 memorize.factor.npc=1.000
+memorize.lowlvl.cap=30.000
+memorize.lowlvl.bottom=40.000
 [bards]
 bard.instrumentFactor=0.350
 song.bard.harming.mod=1.000
