--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1707,6 +1707,8 @@ skill.timer.secs.smiteEvil=3.000
 skill.shieldBlock.blessBonus=1.200
 skill.guard.agiDiffMaxBonus=5.000
 skill.guard.guardFightingPenalty=5.000
+skill.guard.max=1.000
+skill.guard.max.multi=2.000
 skill.criticalAttack.disarm.dropChance=5.000
 skill.shieldCombat.ACBonusMultiplier=0.500
 skill.improvedShieldCombat.damageMultiplier=1.000
