Adding monk remort from cleric races orc kuo kobold human gnome githzerai.  Remort at Dada monk teacher in WH for 1k epics and 5k plat. (fixes #564)

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -51,7 +51,7 @@ dragon.Furious.DamageMod=2.000
 dragon.Rake.Attack.base=60.000
 [vamping]
 vamping.vampiricTouch=0.250
-vamping.vampiricTouch.monks=0.070
+vamping.vampiricTouch.monks=0.050
 vamping.vampiricTouch.antipaladins=0.700
 vamping.vampiricTouch.mercs=0.100
 vamping.vampiricTouch.warriors=0.100
@@ -351,7 +351,7 @@ damage.totalOutput.class.Psionicist=0.800
 damage.totalOutput.class.Paladin=1.150
 damage.totalOutput.class.Anti-Paladin=1.000
 damage.totalOutput.class.Cleric=0.900
-damage.totalOutput.class.Monk=1.000
+damage.totalOutput.class.Monk=1.100
 damage.totalOutput.class.Druid=1.000
 damage.totalOutput.class.Shaman=0.900
 damage.totalOutput.class.Ethermancer=1.000
@@ -2164,6 +2164,9 @@ poison.maxDuration.min=4.000
 ascend.epicCost=2500.000
 [descend]
 descend.epicCost=2500.000
+[remort]
+remort.monk.epic.cost=1000.000
+remort.monk.cost=5000000.000
 [econ]
 price.home.plat=50.000
 [Berserkers]
@@ -2206,7 +2209,7 @@ gain.exp.mod.paladin=1.000
 gain.exp.mod.antipaladin=1.000
 gain.exp.mod.ethermancer=1.150
 gain.exp.mod.berserker=0.850
-gain.exp.mod.monk=0.850
+gain.exp.mod.monk=0.700
 gain.exp.mod.cleric=1.100
 gain.exp.mod.shaman=1.150
 gain.exp.mod.druid=1.150
