Adding property for areas to hit PC's at 40% damage.  Upgrades to sunray, earthen maul, and cyclone damage.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -656,6 +656,7 @@ spell.area.chanceStep.lightningRing=15.000
 spell.area.minChance.lightningRing=100.000
 spell.area.chanceStep.firestorm=10.000
 spell.area.minChance.firestorm=100.000
+spell.area.minChance.doom=100.000
 spell.area.stackTimer.earthenRain=2.000
 spell.area.stackTimer.incendiaryCloud=5.000
 spell.area.stackTimer.meteorswarm=2.000
@@ -717,6 +718,7 @@ spell.area.damage.factor.earthenrain=1.000
 spell.area.damage.factor.polarvortex=1.000
 spell.area.damage.factor.aidoftheheavens=1.200
 spell.area.damage.factor.chainlightning=1.000
+spell.area.damage.to.pc=0.400
 
 [equipment]
 timer.stoneskin.artifact.avenger=20.000
