--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2344,6 +2344,10 @@ guildhalls.construction.platinum.upgrade.library=25000.000
 guildhalls.construction.points.upgrade.library=35.000
 guildhalls.construction.platinum.upgrade.cargo=20000.000
 guildhalls.construction.points.upgrade.cargo=30.000
+guildhalls.construction.points.overmax=100.000
+guildhalls.construction.platinum.overmax=50000000.000
+guildhalls.construction.overmax.cap.good=10.000
+guildhalls.construction.overmax.cap.evil=5.000
 [Monks]
 monk.weight.str.modifier.denominator=10.000
 [logs]
