various balancing changes, some updates to rolling/new character creation, added innate elemental power for real, allowed harpies to select harpy ht and fixed the racetable to show their option correctly, removed give_proper_stat from places it didn't belong, fixed up starting stats of mobs, added agility ac to stat display for immortals

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -125,6 +125,7 @@ damage.reduction.negarmor=0.750
 damage.reduction.skinSpell.deduct=46.000
 damage.reduction.chaosshield.mod=0.900
 damage.reduction.swashbuckler=0.800
+damage.increase.elementalPower=1.250
 damage.increase.swashbuckler=1.250
 damage.increase.coldWrithe=2.000
 damage.increase.ironwood=1.200
