--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2377,6 +2377,7 @@ monk.weight.str.modifier.denominator=10.000
 [logs]
 logs.chat.status=0.000
 [justice]
+justice.raiding.alarm.time=300.000
 justice.alarms.evil=0.000
 justice.alarms.good=1.000
 [super cannon]
