removal of blood and nexus tasks

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2057,7 +2057,7 @@ shops.sellMinPct=0.100
 shops.peruse.cost=1000.000
 [mobspecs]
 mobspecs.rename.price=5000000.000
-mobspecs.epicTaskClear.price=500000.000
+mobspecs.epicTaskClear.price=2000000.000
 [portals]
 portals.etherportal.maxToPass=5.000
 portals.etherportal.initTimeout=5.000
