Moved achievements code into achievements.c

--- a/src/Makefile.linux
+++ b/src/Makefile.linux
@@ -1,4 +1,4 @@
- # Makefile for Project Duris!
+# Makefile for Project Duris!
 
 SHELL = /bin/sh
 #EFENCE = 1
@@ -8,7 +8,7 @@ DEBUG	= -ggdb3
 #LDFLAGS	= -ggdb3
 
 ifdef USE_SHARED
-LDFLAGS += -rdynamic
+	LDFLAGS += -rdynamic
 endif
 
 LDFLAGS += -L/usr/lib/mysql -L./ships -fno-stack-protector
@@ -28,9 +28,9 @@ INCLUDES	= -I. -I/usr/include/libxml2 -I/usr/include/mysql -I./ships
 GENERAL_LIBS    = -lm -lstdc++ -lz -lxml2 -lmysqlclient -lcrypt
 
 ifdef EFENCE
-LDFLAGS += -L.
-LIBS += -lefence -lrt
-CFLAGS += -DEFENCE
+	LDFLAGS += -L.
+	LIBS += -lefence -lrt
+	CFLAGS += -DEFENCE
 endif
 
 # GENERAL_LIBS += -lcygipc 
@@ -48,182 +48,183 @@ SH_LIBS 	=
 OPT_OBJS	= graph.o mm.o 
 
 OBJS	=  \
-	magic.o \
-	actcomm.o \
-	actinf.o \
-	actmove.o \
-	actnew.o \
-	actobj.o \
-	actoff.o \
-	actoth.o \
-	actset.o \
-	actwiz.o \
-  ai_mobs.o \
-  specs.ailvio.o \
-  alliances.o \
-  automatic_rules.o \
-	affects.o \
-	arena.o \
-	artifact.o \
-	assocs.o \
-	auction_houses.o \
-	bard.o \
-  beh_magic.o \
-	boards.o \
-	boon.o \
-	buildings.o \
-        comm.o \
-	common.o \
-	condition.o \
-	constant.o \
-        ctf.o \
-	db.o \
-	debug.o \
-	disguise.o \
-	drannak.o \
-	dreadlord.o \
-	editor.o \
-  encounters.o \
-	epic.o \
-	epic_bonus.o \
-  ethermancer.o \
-	events.o \
-	new_events.o \
-	fight.o \
-	files.o \
-	fraglist.o \
-	forge_items.o \
-  genrand.o \
-	group.o \
-	guild.o \
-  guildhall.o \
-  guildhall_rooms.o \
-  guildhall_cmds.o \
-  guildhall_procs.o \
-  guildhall_db.o \
-	grapple.o \
-	handler.o \
-	hardcore.o \
-	innates.o \
-	interp.o \
-  justice.o \
-	kick.o \
-	language.o \
-	limits.o \
-	linked_objects.o\
-	listen.o\
-	mail.o \
-	map.o \
-	mccp.o \
-	memorize.o \
-	memory.o \
-	mobact.o \
-  world_quest.o \
-	mobcombat.o \
-	mobconv.o \
-	mobpatrol.o \
-	modify.o \
-  mount.o \
-	name_gen.o \
-	nanny.o \
-  necromancy.o \
-	new_combat_util.o \
-	new_skills.o \
-	nq.o \
-	objconv.o \
-	objmisc.o \
-	outposts.o \
-        period.list.o \
-	prompt.o \
-	properties.o \
-  psionics.o \
-	quest.o \
-	random.o \
-	randomeq.o \
-	random.mob.o \
-  random.zone.o \
-	randobj.o \
-	range.o \
-  rogues.o \
-	shaman.o \
-	shop.o \
-	signals.o \
-	skills.o \
-	smagic.o \
-	salchemist.o \
-  siege.o \
-  sillusionist.o \
-	sound.o \
-	sparser.o \
-	specials.o \
-  specializations.o \
-	specs.assign.o \
-	specs.barovia.o \
-	specs.clwcvrn.o \
-	specs.dragonnia.o \
-  specs.eth2.o \
-  specs.halfcut.o \
-  specs.ravenloft.o \
-  specs.snogres.o \
-	specs.ioun.o \
-	specs.jot.o \
-	specs.library.o \
-	specs.lohrr.o \
-	specs.mobile.o \
-     specs.morgs.o \
-     specs.mist.o \
-	specs.object.o \
-	specs.realm.o \
-	specs.room.o \
-	specs.snikzone.o \
-	specs.grove.o \
-	specs.hoa.o \
-	specs.highway.o \
-	specs.tharnadia.o \
-	specs.twintowers.o \
-  specs.undermountain.o \
-	specs.underworld.o \
-	specs.vecna.o \
-	specs.venthix.o \
-        specs.verzanan.o \
-	specs.zalrix.o \
-	specs.set.o \
-  specs.shabo.o \
-  specs.jubilex.o \
-  specs.keleks.o \
-  specs.caertannad.o \
-  specs.firep.o \
-	specs.winterhaven.o \
-  specs.zion.o \
-	spells.o \
-	sql.o	\
-	statistics.o \
-	storage_lockers.o \
-	tether.o \
-	timers.o \
-	track.o \
-	tradeskill.o \
-  trap.o \
-  transport.o \
-  trophy.o \
-	utility.o \
-	weather.o \
-	ferry.o \
-	ferryact.o \
-	paladins.o \
- 	guard.o \
- 	makeexit.o \
-	racewar_stat_mods.o \
-	nexus_stones.o \
-	testcmd.o \
-	wikihelp.o \
-  reavers.o \
-  avengers.o \
-  specs.lucrot.o \
-  multiplay_whitelist.o
+				 magic.o \
+				 achievements.o \
+				 actcomm.o \
+				 actinf.o \
+				 actmove.o \
+				 actnew.o \
+				 actobj.o \
+				 actoff.o \
+				 actoth.o \
+				 actset.o \
+				 actwiz.o \
+				 ai_mobs.o \
+				 specs.ailvio.o \
+				 alliances.o \
+				 automatic_rules.o \
+				 affects.o \
+				 arena.o \
+				 artifact.o \
+				 assocs.o \
+				 auction_houses.o \
+				 bard.o \
+				 beh_magic.o \
+				 boards.o \
+				 boon.o \
+				 buildings.o \
+				 comm.o \
+				 common.o \
+				 condition.o \
+				 constant.o \
+				 ctf.o \
+				 db.o \
+				 debug.o \
+				 disguise.o \
+				 drannak.o \
+				 dreadlord.o \
+				 editor.o \
+				 encounters.o \
+				 epic.o \
+				 epic_bonus.o \
+				 ethermancer.o \
+				 events.o \
+				 new_events.o \
+				 fight.o \
+				 files.o \
+				 fraglist.o \
+				 forge_items.o \
+				 genrand.o \
+				 group.o \
+				 guild.o \
+				 guildhall.o \
+				 guildhall_rooms.o \
+				 guildhall_cmds.o \
+				 guildhall_procs.o \
+				 guildhall_db.o \
+				 grapple.o \
+				 handler.o \
+				 hardcore.o \
+				 innates.o \
+				 interp.o \
+				 justice.o \
+				 kick.o \
+				 language.o \
+				 limits.o \
+				 linked_objects.o\
+				 listen.o\
+				 mail.o \
+				 map.o \
+				 mccp.o \
+				 memorize.o \
+				 memory.o \
+				 mobact.o \
+				 world_quest.o \
+				 mobcombat.o \
+				 mobconv.o \
+				 mobpatrol.o \
+				 modify.o \
+				 mount.o \
+				 name_gen.o \
+				 nanny.o \
+				 necromancy.o \
+				 new_combat_util.o \
+				 new_skills.o \
+				 nq.o \
+				 objconv.o \
+				 objmisc.o \
+				 outposts.o \
+				 period.list.o \
+				 prompt.o \
+				 properties.o \
+				 psionics.o \
+				 quest.o \
+				 random.o \
+				 randomeq.o \
+				 random.mob.o \
+				 random.zone.o \
+				 randobj.o \
+				 range.o \
+				 rogues.o \
+				 shaman.o \
+				 shop.o \
+				 signals.o \
+				 skills.o \
+				 smagic.o \
+				 salchemist.o \
+				 siege.o \
+				 sillusionist.o \
+				 sound.o \
+				 sparser.o \
+				 specials.o \
+				 specializations.o \
+				 specs.assign.o \
+				 specs.barovia.o \
+				 specs.clwcvrn.o \
+				 specs.dragonnia.o \
+				 specs.eth2.o \
+				 specs.halfcut.o \
+				 specs.ravenloft.o \
+				 specs.snogres.o \
+				 specs.ioun.o \
+				 specs.jot.o \
+				 specs.library.o \
+				 specs.lohrr.o \
+				 specs.mobile.o \
+				 specs.morgs.o \
+				 specs.mist.o \
+				 specs.object.o \
+				 specs.realm.o \
+				 specs.room.o \
+				 specs.snikzone.o \
+				 specs.grove.o \
+				 specs.hoa.o \
+				 specs.highway.o \
+				 specs.tharnadia.o \
+				 specs.twintowers.o \
+				 specs.undermountain.o \
+				 specs.underworld.o \
+				 specs.vecna.o \
+				 specs.venthix.o \
+				 specs.verzanan.o \
+				 specs.zalrix.o \
+				 specs.set.o \
+				 specs.shabo.o \
+				 specs.jubilex.o \
+				 specs.keleks.o \
+				 specs.caertannad.o \
+				 specs.firep.o \
+				 specs.winterhaven.o \
+				 specs.zion.o \
+				 spells.o \
+				 sql.o	\
+				 statistics.o \
+				 storage_lockers.o \
+				 tether.o \
+				 timers.o \
+				 track.o \
+				 tradeskill.o \
+				 trap.o \
+				 transport.o \
+				 trophy.o \
+				 utility.o \
+				 weather.o \
+				 ferry.o \
+				 ferryact.o \
+				 paladins.o \
+				 guard.o \
+				 makeexit.o \
+				 racewar_stat_mods.o \
+				 nexus_stones.o \
+				 testcmd.o \
+				 wikihelp.o \
+				 reavers.o \
+				 avengers.o \
+				 specs.lucrot.o \
+				 multiplay_whitelist.o
 
 SHARED_PFILE_OBJS=pf-skills.o \
-					 pf-files.o
+									pf-files.o
 
 PFILE_OBJS=pfile-stubs.o \
 					 pfile.o
@@ -240,10 +241,10 @@ DMS_OBJS = $(OBJS)
 
 
 ifndef USE_SHARED
-DMS_OBJS += $(SH_LIBS)
-PFILE_OBJS += $(SH_LIBS)
+	DMS_OBJS += $(SH_LIBS)
+	PFILE_OBJS += $(SH_LIBS)
 else
-PROGS += $(SH_LIBS:.o=.so)
+	PROGS += $(SH_LIBS:.o=.so)
 endif
 
 SRCS	= $(OBJS:.o=.c) $(OPT_OBJS:.o=.c) $(SH_LIBS:.o=.c) $(PFILE_OBJS:.o=.c)
