Changed how siege should be enabled

--- a/src/Makefile.linux
+++ b/src/Makefile.linux
@@ -153,6 +153,7 @@ OBJS	=  \
 				 smagic.o \
 				 salchemist.o \
 				 sillusionist.o \
+				 siege.o \
 				 sound.o \
 				 sparser.o \
 				 specials.o \
